# hyprwire-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  publish.yaml
src/: client.rs  lib.rs  wire.rs
