[package]
name = "hyprwire-rs"
version = "0.1.0"
edition = "2024"
authors = ["0xk1f0"]
description = "A hyprwire Rust implementation"
readme = "README.md"
repository = "https://github.com/0xk1f0/hyprwire-rs"
homepage = "https://github.com/0xk1f0/hyprwire-rs"
license = "BSD-3-Clause"
exclude = [".github/"]
rust-version = "1.85.0"

[dependencies]
